--- a/main.html
+++ b/main.html
@@ -7,9 +7,18 @@
 </head>
 
 <body>
-	<p>First Paragraph</p>
-	<p>:first-child)</p>
-	<p></p>
+	<article>
+		<p>This is the first Paragraph.</p>
+		<p>This is the second Paragraph.</p>
+		<p>This is the Third Paragraph.</p>
+	</article>
+	<ul>
+		<li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>Fourth item</li>
+        <li>Fifth item</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
